--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Original Trombone</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/d023d2b619.js" crossorigin="anonymous"></script>
 </head>
